# cmake_multiproject_template

./: CMakeLists.txt
a/: CMakeLists.txt  aConfig.cmake
a/include/a/: a.h
a/src/: a.cc
b/: CMakeLists.txt
b/src/: b.cc
